# voice-sandwich-demo

./: main.py  pyproject.toml
app/: assemblyai_stt.py  cartesia_prompts.py  cartesia_tts.py  config.py  elevenlabs_tts.py  events.py  utils.py
static/: app.js  index.html  style.css
