[project]
name = "python-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "langchain",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv",
    "uvicorn>=0.38.0",
    "websockets",
]
